refactor: reading the notifications specific to the gestionnaire will e handled in the backend